--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,10 @@ const swiper = new Swiper('.swiper', {
   pagination: {
     el: '.swiper-pagination',
   },
-
+  autoplay : {  // 자동 슬라이드 설정 , 비 활성화 시 false
+    delay : 3000,   // 시간 설정
+    disableOnInteraction : false,  // false로 설정하면 스와이프 후 자동 재생이 비활성화 되지 않음
+  },
   // Navigation arrows
   navigation: {
     nextEl: '.swiper-button-next',
