구약성경 페이지 추가, jquery 추가, dummy div 구현

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 col-sm-4 col-lg-3 col-xl-2 text-center">
-                <div class="card card-margin border-0">
+                <div class="card card-margin border-0" onclick="location.href='bible_main.html';" style="cursor: pointer;">
                     <div>
                         <i class="fa-solid fa-book-bible fa-3x"></i>
                     </div>
